Prevent layout shift caused by support button

--- a/src/app.css
+++ b/src/app.css
@@ -508,39 +508,3 @@ textarea:focus-visible,
   display: none;
 }
 
-.support-chat-button {
-  background: #1f93ff;
-  border-radius: 100px;
-  border-width: 0;
-  bottom: 20px;
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.16) !important;
-  cursor: pointer;
-  height: 64px;
-  overflow: hidden;
-  padding: 0;
-  position: fixed;
-  right: 20px;
-  user-select: none;
-  width: 64px;
-  z-index: 2147483000 !important;
-}
-
-.support-chat-button:hover {
-  background: #1f93ff;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4) !important;
-}
-
-.support-chat-button:disabled {
-  cursor: wait;
-}
-
-.support-chat-button svg {
-  all: revert;
-  height: 24px;
-  margin: 20px;
-  width: 24px;
-}
-
-.support-chat-button--loading {
-  opacity: 0.85;
-}
